--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -19,6 +19,7 @@
                 {{/userName}}
                 {{^userName}}       <!-- 해당 값이 존재하지 않는 경우 : 구글 로그인 버튼 노출시키기 (얘도 스프링 시큐리티에서 기본적으로 제공하는 로그인 url임)-->
                     <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
                 {{/userName}}
             </div>
         </div>
